# photo-annotation-tool

./: .coverage  .dockerignore  CLAUDE.md  Dockerfile  README.md  annotations.csv  docker-compose.yml  main.py  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  TESTING.md
src/photo_annotator/: main.py
src/photo_annotator/api/: routes.py
src/photo_annotator/models/: schemas.py
src/photo_annotator/services/: csv_service.py  file_handler.py  image_service.py
templates/: index.html
tests/unit/: test_api_routes.py  test_csv_service.py  test_file_handler.py  test_image_service.py
